--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -70,6 +70,7 @@ table {
 
 body {
   font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
   .task-form{
     display: flex;
     flex-direction: column;
@@ -104,6 +105,7 @@ h1 {
 
 .app-header{
   min-width: 100vw;
+  max-width: 100vw;
   min-height: 500px;
   height: 70vh;
   display: flex;
@@ -194,6 +196,8 @@ $ 'nav', { className: 'navbar card'}, =>
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 100vw;
+  max-width: 100vw;
   padding: 1rem;
   @include grid-media($mamba-grid-xs) {
     display: none;
@@ -215,6 +219,46 @@ $ 'nav', { className: 'navbar card'}, =>
       flex-basis: 25%;
       text-align: center;
       height: 100%;
+      z-index: 5;
+      a {
+        z-index: 5;
+      }
+    }
+  }
+}
+
+.app-layout{
+  max-width: 100vw;
+  padding: 0;
+}
+.container.showpage {
+  max-width: 100%;
+}
+
+.full-blog.container {
+  .card {
+    &-header {
+
+    }
+    &-title {
+      text-align: center;
+      font-family: 'Grand Hotel', cursive;
+      font-size: 3rem;
+
+      @include grid-media($mamba-grid-xs) {
+        font-size: 2rem;
+      }
+
+    }
+    &-img-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+    }
+    &-img {
+      max-height: 300px;
+      max-width: 300px;
+      margin: 0 auto;
     }
   }
 }
