--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -256,9 +256,82 @@ $ 'nav', { className: 'navbar card'}, =>
       justify-content: center;
     }
     &-img {
-      max-height: 300px;
-      max-width: 300px;
-      margin: 0 auto;
+      max-width: 500px;
+      margin: 2rem auto;
     }
   }
 }
+
+#subscribeFormHeading {
+  color: $lightRedCTA;
+}
+
+table{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-between;
+  border: 1px solid white;
+  thead{
+    font-family: 'Grand Hotel', cursive;
+    font-weight: 100;
+    font-size: 2.5rem;
+    @include grid-media($mamba-grid-xs) {
+      font-size: 1.2rem
+    }
+    tr{
+      display: flex;
+      justify-content: space-around;
+      align-items: space-between;
+      border: 1px solid white;
+      @include grid-media($mamba-grid-xs) {
+        flex-direction: column;
+        align-items: center;
+      }
+      th {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+      }
+    }
+  }
+  tbody{
+    font-weight: 100;
+    font-size: 1.5rem;
+    @include grid-media($mamba-grid-xs) {
+      font-size: 1rem;
+    }
+    tr{
+      display: flex;
+      justify-content: space-around;
+      align-items: space-between;
+      border: 1px solid white;
+      @include grid-media($mamba-grid-xs) {
+        flex-direction: column;
+      }
+      td {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+      }
+    }
+  }
+
+}
+
+#projects-page table {
+    thead{
+      tr{
+        th {
+          flex-basis: 33%;
+        }
+      }
+    }
+    tbody{
+      tr{
+        td {
+          flex-basis: 33%;
+        }
+      }
+    }
+  }
