--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -2,7 +2,7 @@
 
 $mamba-extra-small-breakpoint: '(max-width: 575.9999999999px)';
 $mamba-small-breakpoint: '(min-width: 576px)';
-$mamba-medium-breakpoint: '(min-with: 768px)';
+$mamba-medium-breakpoint: '(min-width: 768px)';
 $mamba-large-breakpoint: '(min-width: 992px)';
 $mamba-extra-large-breakpoint: '(min-width: 1200px)';
 $mamba-double-xl-breakpoint: '(min-width: 1400px)';
