--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -35,8 +35,8 @@ a, a:link, a:visited {
   z-index: 2;
   &:hover{
     color: $whiteText;
-    box-shadow: 8px 16px 32px tan;
-    background: tan;
+    box-shadow: 8px 16px 32px rgba(0, 77, 0, 0.5);
+    background: radial-gradient(rgba(177, 0, 0, 0.5), rgba(0, 77, 0, 0.5));
   }
 }
 .nav-item a:hover {
@@ -117,7 +117,7 @@ h1 {
   min-width: 100vw;
   max-width: 100vw;
   min-height: 500px;
-  height: 70vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -130,7 +130,7 @@ h1 {
     height: 100vh;
   }
   .cover {
-    background-color: rgba(37, 28, 5, 0.6);
+    background-image: linear-gradient(rgba(177, 0, 0, 0.7), rgba(0, 77, 0, 0.6));
     position: fixed;
     opacity: 1;
     left: 0px;
@@ -175,10 +175,11 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 4px 8px 16px rgba(37, 28, 5, 0.6);
-    background-color: rgba(37, 28, 5, 0.6);
+    box-shadow: 4px 8px 16px rgba(37, 0, 0, 0.6);
+    background-color: rgba(0, 37, 0, 0.6);
     padding: 2rem;
     margin: 1rem;
+    text-align: center;
     box-sizing: border-box;
     .container{
       display: flex;
@@ -186,6 +187,10 @@ h1 {
       justify-content: space-between;
       align-items: center;
       text-align: center;
+      * {
+        margin: .5rem 0 .25rem 0;
+        text-align: center;
+      }
     }
   }
 }
@@ -213,7 +218,8 @@ $ 'nav', { className: 'navbar card'}, =>
   max-width: 100vw;
   padding: 1rem;
   @include grid-media($mamba-grid-xs) {
-    display: none;
+    display: flex;
+    flex-direction: column;
   }
   .nav-items{
     margin: 0;
@@ -227,12 +233,20 @@ $ 'nav', { className: 'navbar card'}, =>
     text-decoration: none;
     list-style: none;
     flex-direction: row;
+    @include grid-media($mamba-grid-xs) {
+      display: flex;
+      flex-direction: column;
+    }
 
     .nav-item {
       flex-basis: 25%;
       text-align: center;
       height: 100%;
       z-index: 5;
+      @include grid-media($mamba-grid-xs) {
+        border: 2px solid white;
+        width: 100%;
+      }
       a {
         z-index: 5;
       }
