--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -127,7 +127,9 @@ h1 {
   background-size: cover;
   color: $whiteText;
   @include grid-media($mamba-grid-xs) {
-    height: 100vh;
+    min-height: 120vh;
+    height: 155vh;
+    background-size: auto;
   }
   .cover {
     background-image: linear-gradient(rgba(177, 0, 0, 0.7), rgba(0, 77, 0, 0.6));
@@ -155,6 +157,8 @@ h1 {
     z-index: 2;
     @include grid-media($mamba-grid-xs) {
       font-size: 1rem;
+            opacity: 0.3;
+            font-weight: bold;
     }
   }
   .motto {
@@ -167,6 +171,8 @@ h1 {
     }
     @include grid-media($mamba-grid-xs) {
       font-size: 1.25rem;
+            opacity: 0.3;
+            font-weight: bold;
     }
   }
   .subscribe {
@@ -181,6 +187,7 @@ h1 {
     margin: 1rem;
     text-align: center;
     box-sizing: border-box;
+
     .container{
       display: flex;
       flex-direction: column;
