--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -74,7 +74,7 @@ $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
-$dark:          $gray-900 !default;
+$dark:          rgba(0,47,0,0.7) !default;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
