--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -48,7 +48,7 @@ body {
   line-height: 1;
   background: white;
   color: $whiteText;
-  background-color: rgba(37, 28, 5, 0.6);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0,77,0, 0.7), rgba(0,0,0, 0.7), rgba(177, 0, 0, 0.6));
 }
 
 ol,
@@ -104,7 +104,10 @@ body {
     }
   }
   .card {
-    background-color: rgba(37, 28, 5, 0.6);
+    // background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0,77,0, 0.7), rgba(0,0,0, 0.7), rgba(177, 0, 0, 0.6));
+    background-color: rgba(0,0,0, 0.7);
+    box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.7);
+    padding: 1rem;
   }
 }
 
@@ -120,7 +123,7 @@ h1 {
   height: 90vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   background: url('/img/main.png');
   background-repeat: no-repeat;
@@ -155,9 +158,8 @@ h1 {
     font-weight: 600;
     z-index: 2;
     @include grid-media($mamba-grid-xs) {
-      font-size: 1rem;
-            opacity: 0.3;
-            font-weight: bold;
+      font-size: 2rem;
+      font-weight: bold;
     }
   }
   .motto {
@@ -170,8 +172,7 @@ h1 {
     }
     @include grid-media($mamba-grid-xs) {
       font-size: 1.25rem;
-            opacity: 0.3;
-            font-weight: bold;
+      font-weight: bold;
     }
   }
   .subscribe {
@@ -214,7 +215,15 @@ $ 'nav', { className: 'navbar card'}, =>
       $.text 'Posts'
 */
 
-.appnav{
+
+.appnav {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.appnav, .appfooter, .appmobilenavbar{
+  z-index: 100000;
   background-color: rgba(37, 28, 5, 0.6);
   box-shadow: 4px 8px 16px rgba(37, 28, 5, 0.6);
   display: flex;
@@ -224,8 +233,7 @@ $ 'nav', { className: 'navbar card'}, =>
   max-width: 100vw;
   padding: 1rem;
   @include grid-media($mamba-grid-xs) {
-    display: flex;
-    flex-direction: column;
+    display: none;
   }
   .nav-items{
     margin: 0;
@@ -250,8 +258,10 @@ $ 'nav', { className: 'navbar card'}, =>
       height: 100%;
       z-index: 5;
       @include grid-media($mamba-grid-xs) {
-        border: 2px solid white;
+        border: 1px solid rgba(0,0,0,0.7);
         width: 100%;
+        box-shadow: 4px 8px 16px rgba(0,0,0,0.7);
+        margin: 4px;
       }
       a {
         z-index: 5;
@@ -260,9 +270,20 @@ $ 'nav', { className: 'navbar card'}, =>
   }
 }
 
+.appmobilenavbar {
+  @include grid-media($mamba-grid-xs) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .app-layout{
   max-width: 100vw;
   padding: 0;
+  margin-top: 10vh;
+  @include grid-media($mamba-grid-xs){
+    margin-top: 0;
+  }
 }
 .container.showpage {
   max-width: 100%;
@@ -375,5 +396,10 @@ table{
           }
         }
       }
+    }
+  }
+  #contact-page {
+    #contactmevia {
+      text-align: center;
     }
   }
