--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -130,11 +130,35 @@ h1 {
 .app-banner .motto {
   background-color: rgba(0,0,0,0.5);
 }
+.app-banner-primary{
+  min-width: 100vw;
+  height: 500px;
+  max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  color: $whiteText;
+  .logo{
+    height: 100%;
+  }
+  .cover {
+    background-image: linear-gradient(rgba(177, 0, 0, 0.7), rgba(0, 77, 0, 0.6));
+    position: fixed;
+    opacity: 1;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    min-height: 500px;
+    height: 100%;
+    z-index: -1;
+  }
+}
 .app-header, .app-banner{
   min-width: 100vw;
   max-width: 100vw;
   min-height: 500px;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -143,9 +167,18 @@ h1 {
   background-repeat: no-repeat;
   background-size: cover;
   color: $whiteText;
+  height: 1024px;
+  padding-top: 4rem;
   @include grid-media($mamba-grid-xs) {
     min-height: 100vh;
     background-size: auto;
+    height: 900px;
+  }
+  .div{
+    z-index: 2;
+  }
+  .logo{
+    width: 25%;
   }
   .cover {
     background-image: linear-gradient(rgba(177, 0, 0, 0.7), rgba(0, 77, 0, 0.6));
@@ -164,6 +197,11 @@ h1 {
     font-size: 5rem;
     color: ghostwhite;
     z-index: 2;
+    text-align: center;
+    div {
+      font-size: calc(1.25rem + 1vw);
+      font-family: 'Roboto', sans-serif;
+    }
     @include grid-media($mamba-grid-xs) {
       font-size: 2rem;
     }
@@ -195,13 +233,12 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 4px 8px 16px rgba(37, 0, 0, 0.6);
-    background-color: rgba(0, 37, 0, 0.6);
     padding: 2rem;
     margin: 1rem;
+    background-color: rgba(0, 37, 0, 0.6);
     text-align: center;
     box-sizing: border-box;
-
+    position: relative;
     .container{
       display: flex;
       flex-direction: column;
@@ -314,8 +351,47 @@ $ 'nav', { className: 'navbar card'}, =>
     margin-top: 0;
   }
 }
+
+.allposts-transition {
+  text-align: center;
+  z-index: 2;
+  color: $whiteText;
+  padding: 1rem;
+}
 .container.showpage {
   max-width: 100%;
+}
+.post-content{
+  .card {
+    &-header {
+      text-align: center;
+      font-size: 2rem;
+    }
+  }
+}
+
+.pillar.container{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  max-width: 90vw;
+  overflow: hidden;
+  .card {
+    background: transparent;
+    box-shadow: 0 0 0 rgb(0,0,0);
+    border: none;
+    &-title{
+      text-align: center;
+      font-family: 'Roboto', sans-serif;
+      font-size: 3rem;
+
+      @include grid-media($mamba-grid-xs) {
+        font-size: 2rem;
+      }
+    }
+  }
 }
 
 .full-blog.container {
@@ -324,6 +400,10 @@ $ 'nav', { className: 'navbar card'}, =>
   flex-direction: column;
   align-items: center;
   .card {
+    @include grid-media($mamba-grid-xs) {
+      font-size: 1.2rem;
+      max-width: 90vw;
+    }
     &-header {
 
     }
@@ -431,12 +511,16 @@ table{
       }
     }
   }
-  #contact-page {
+  #contact-page, #projects-page {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 97.5vw;
     #contactmevia {
       text-align: center;
+    }
+    .card-img {
+      max-width: 80%;
     }
   }
 
@@ -496,7 +580,7 @@ table{
         transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
         & .nav-items {
           position: absolute;
-          top: 50%;
+          top: 70%;
           left: 50%;
           transform: translate(-50%, -50%);
           list-style: none;
@@ -570,4 +654,10 @@ table{
     top: .65rem;
   }
 }
+}
+
+.copyright {
+  text-align: center;
+  color: $whiteText;
+  font-weight: 600;
 }
