--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -661,3 +661,17 @@ table{
   color: $whiteText;
   font-weight: 600;
 }
+
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.iframe-container > iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
