Changes Noted Below

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -675,3 +675,11 @@ table{
   width: 100%;
   height: 100%;
 }
+
+section.list-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
