--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -690,9 +690,12 @@ h3 + ol {
   align-items: center;
   font-size: 1.5rem;
   text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
- -moz-animation: glow 1s ease-in-out infinite alternate;
- animation: glow 1s ease-in-out infinite alternate;
+  li {
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+   -moz-animation: glow 1s ease-in-out infinite alternate;
+   animation: glow 1s ease-in-out infinite alternate;
+
+  }
 }
 
 @-webkit-keyframes glow {
