--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,6 +6,15 @@
 @import "bs";
 @import "grid";
 
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60011, 0 0 40px #e60011, 0 0 50px #e60011, 0 0 60px #e60011, 0 0 70px #e60011;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff0000, 0 0 40px rgba(0,77,0, 0.7), 0 0 50px rgba(0,77,0, 0.7), 0 0 60px rgba(0,77,0, 0.7), 0 0 70px rgba(0,77,0, 0.7), 0 0 80px rgba(0,77,0, 0.7);
+  }
+}
+
 $custom-colors: (
   "elegant-purple": #8E6E95,
   "blue-green": #39A59C,
@@ -695,14 +704,5 @@ h3 + ol {
    -moz-animation: glow 1s ease-in-out infinite alternate;
    animation: glow 1s ease-in-out infinite alternate;
 
-  }
-}
-
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60011, 0 0 40px #e60011, 0 0 50px #e60011, 0 0 60px #e60011, 0 0 70px #e60011;
-  }
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff0000, 0 0 40px rgba(0,77,0, 0.7), 0 0 50px rgba(0,77,0, 0.7), 0 0 60px rgba(0,77,0, 0.7), 0 0 70px rgba(0,77,0, 0.7), 0 0 80px rgba(0,77,0, 0.7);
   }
 }
