--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -712,5 +712,6 @@ h3 + ol, h2 + ol, h3 + ul, h2 + ul {
       }
     }
    @include animate(glow, 1s, ease-in-out, infinite, alternate);
+   margin-bottom: 0.5rem;
   }
 }
