--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,15 +6,15 @@
 @import "bs";
 @import "grid";
 
-@mixin animate($animation,$duration,$method,$times, $last){
-    animation: $animation $duration $method $times $last;
-}
-
-@mixin keyframes($name){
-    @keyframes #{$name}{
-        @content;
-    }
-}
+// @mixin animate($animation,$duration,$method,$times, $last){
+//     animation: $animation $duration $method $times $last;
+// }
+//
+// @mixin keyframes($name){
+//     @keyframes #{$name}{
+//         @content;
+//     }
+// }
 
 
 
@@ -703,15 +703,6 @@ h3 + ol, h2 + ol, h3 + ul, h2 + ul {
   font-size: 1.5rem;
   text-align: center;
   li {
-    @include keyframes(glow) {
-      from {
-        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60011, 0 0 40px #e60011, 0 0 50px #e60011, 0 0 60px #e60011, 0 0 70px #e60011;
-      }
-      to {
-        text-shadow: 0 0 20px #fff, 0 0 30px #ff0000, 0 0 40px rgba(0,77,0, 0.7), 0 0 50px rgba(0,77,0, 0.7), 0 0 60px rgba(0,77,0, 0.7), 0 0 70px rgba(0,77,0, 0.7), 0 0 80px rgba(0,77,0, 0.7);
-      }
-    }
-   @include animate(glow, 1s, ease-in-out, infinite, alternate);
    margin-bottom: 0.5rem;
   }
 }
